tests/baselines/reference/untypedModuleImport_noImplicitAny.errors.txt
/a.ts(1,22): error TS7016: Could not find a declaration file for module 'foo'. '/node_modules/foo/index.js' implicitly has an 'any' type.


==== /a.ts (1 errors) ====
    import * as foo from "foo";
                         ~~~~~
!!! error TS7016: Could not find a declaration file for module 'foo'. '/node_modules/foo/index.js' implicitly has an 'any' type.
    
==== /node_modules/foo/index.js (0 errors) ====
    // This tests that `--noImplicitAny` disables untyped modules.
    
    This file is not processed.
    